tests/baselines/reference/collisionCodeGenModuleWithFunctionChildren.errors.txt
collisionCodeGenModuleWithFunctionChildren.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionCodeGenModuleWithFunctionChildren.ts(6,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionCodeGenModuleWithFunctionChildren.ts(13,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== collisionCodeGenModuleWithFunctionChildren.ts (3 errors) ====
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var x = 3;
        function fn(M, p = x) { }
    }
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function fn2() {
            var M;
            var p = x;
        }
    }
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function fn3() {
            function M() {
                var p = x;
            }
        }
    }